--- a/springboot01/pom.xml
+++ b/springboot01/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <!--freemarker依赖-->
+    <!--<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-freemarker</artifactId>
+    </dependency>-->
+    <!--thymeleaf依赖-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
