--- a/springboot01/src/main/resources/application.yml
+++ b/springboot01/src/main/resources/application.yml
@@ -6,13 +6,15 @@ spring:
   profiles:
     #使用不同环境
     active: dev
-  thymeleaf:
+  freemarker:
     #可以改
     template-loader-path:classpath: /tempates/
     #后缀
     suffix: .html
     #设置编码格式
     charset: utf-8
-
-
-#设置Freemarker视图设置
+    prefix:
+  #thymeleaf视图设置
+  thymeleaf:
+    prefix: classpath:/thyemleaf/
+    cache: false
