spring boot  静态资源设置

--- a/springboot01/src/main/resources/application.yml
+++ b/springboot01/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring:
   thymeleaf:
     prefix: classpath:/thyemleaf/
     cache: false
+
+  #自定义资源目录
+  resources:
+    static-locations: classpath:/public/,classpath:/static/,classpath:/os/
