spring boot  修复 500错误 url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&&serverTimezone=GMT%2B8

--- a/springboot01/src/main/resources/application.yml
+++ b/springboot01/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     #可以改
     template-loader-path:classpath: /tempates/
     #后缀
-    suffix: .html
+    suffix: .ftl
     #设置编码格式
     charset: utf-8
     prefix:
