--- a/springboot_mybatis/pom.xml
+++ b/springboot_mybatis/pom.xml
@@ -56,6 +56,12 @@
       <artifactId>c3p0</artifactId>
       <version>0.9.5.5</version>
     </dependency>
+    <!--工具包-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+
+    </dependency>
   </dependencies>
 
   <build>
