--- a/springboot_mybatis/pom.xml
+++ b/springboot_mybatis/pom.xml
@@ -60,8 +60,18 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-
     </dependency>
+    <!--Ehcache-->
+    <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
