--- a/springboot_mybatis/src/main/resources/application.yml
+++ b/springboot_mybatis/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&&serverTimezone=GMT%2B8
     username: xqr
     password: x15282097256@
+  #设置Ehcache
+  cache:
+    ehcache:
+      config: classpath:ehcache.xml
 
 #mybatis设置
 mybatis:
