--- a/springboot_mybatis/pom.xml
+++ b/springboot_mybatis/pom.xml
@@ -33,6 +33,14 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!--DevTool坐标-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <!--不传递-->
+      <optional>true</optional>
+    </dependency>
+
     <!--mybatis集成-->
     <dependency>
       <groupId>org.mybatis.spring.boot</groupId>
@@ -80,9 +88,12 @@
 
   <build>
     <plugins>
-    <plugin>
+     <plugin>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <fork>true</fork><!--如果没有该配置热部署不生效-->
+        </configuration>
     </plugin>
   </plugins>
   </build>
