--- a/springboot_mybatis/pom.xml
+++ b/springboot_mybatis/pom.xml
@@ -84,6 +84,17 @@
       <artifactId>ehcache</artifactId>
     </dependency>
 
+    <!--api文档-->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.9.2</version>
+    </dependency>
   </dependencies>
 
   <build>
